app/main/default/objects/TASKRAY__trTaskInboxNotification__c/fields/TASKRAY__trNotifiedUser__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>TASKRAY__trNotifiedUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notified User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskRay_Task_Inbox_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>