app/main/default/objects/TASKRAY__trTaskInboxNotification__c/fields/TASKRAY__trTaskRayTask__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>TASKRAY__trTaskRayTask__c</fullName>
        <label>TaskRay Task</label>
        <referenceTo>TASKRAY__Project_Task__c</referenceTo>
        <relationshipLabel>TaskRay Task Inbox Notifications</relationshipLabel>
        <relationshipName>TaskRay_Task_Inbox_Notifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>